# django-bootstrap

./: .gitignore  pyproject.toml
project/: asgi.py  wsgi.py
project/settings/: base.py
