[tool.poetry]
name = "django-bootstrap"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
djangorestframework = "^3.13.1"
psycopg2-binary = "^2.9.3"
redis = "^4.3.4"
pytest-django = "^4.5.2"
gunicorn = "^20.1.0"
django-db-prefix = "^1.0.5"
django-redis = "^5.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
